altered spacing in pros-cons component for issue 5

--- a/src/styles/components/proscons.styl
+++ b/src/styles/components/proscons.styl
@@ -3,12 +3,12 @@
   border-radius: $brad;
   padding: $vspacing*2 $hspacing*2;
   h2 {
-    margin-bottom: $vspacing*2;
+    margin-bottom: $vspacing*3;
   }
   li {
     position:relative;
     padding-left: $hspacing*2.5;
-    margin-bottom: $vspacing*2;
+    margin-bottom: $vspacing*1;
     font-size: $smallCopy;
     line-height: $lineHeight*1.5;
     &:before {
@@ -25,6 +25,7 @@
   }
 
   &__cons {
+    margin-top: $vspacing*3;
     li:before {
       color: #D0021B;
     }
